--- a/1 - An Introduction to Python.ipynb
+++ b/1 - An Introduction to Python.ipynb
@@ -22,7 +22,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 0. Quick Philosophical Underpinning - What is Computer Science?"
+    "# 0. Quick Fundamental Underpinnings - What is Computer Science?"
    ]
   },
   {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -69,40 +69,59 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Question 1: Is Python compiled(0) or interpreted(1)?1\n",
+      "Question 1: Is Python compiled(0) or interpreted(1)?  1\n",
+      "Correct!\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  1\n",
+      "False, try again.\n",
+      "Question 2: Is Python high-level(0) or low-level(1)?  0\n",
       "Correct!\n"
      ]
     }
    ],
    "source": [
-    "answer = eval(raw_input(\"Question 1: Is Python compiled(0) or interpreted(1)?\"))\n",
-    "if answer == 1:\n",
-    "    print \"Correct!\"\n",
-    "else:\n",
-    "    print \"False, try again.\""
+    "flag1 = True\n",
+    "while (flag1):\n",
+    "    answer1 = eval(raw_input(\"Question 1: Is Python compiled(0) or interpreted(1)?  \"))\n",
+    "    if answer1 == 1:\n",
+    "        print \"Correct!\"\n",
+    "        flag1 = False\n",
+    "    else:\n",
+    "        print \"False, try again.\"\n",
+    "\n",
+    "flag2 = True\n",
+    "while (flag2):\n",
+    "    answer2 = eval(raw_input(\"Question 2: Is Python high-level(0) or low-level(1)?  \"))\n",
+    "    if answer2 == 0:\n",
+    "        print \"Correct!\"\n",
+    "        flag2 = False\n",
+    "    else:\n",
+    "        print \"False, try again.\""
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You know enough (for now). Let us plunge into Python and join the dance!"
+    "You know enough (for now). Let us \"plunge\" into Python and \"join the dance!\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Data Types and Print"
+    "## 1. Data Types, Variable Assignments, and Functions"
    ]
   },
   {
@@ -115,12 +134,12 @@
     "* Booleans - True/False\n",
     "* Strings - Characters/Words\n",
     "\n",
-    "The \"print\" function in Python lets us to print very basic numerical and string expressions to command-line interface (in Jupyter, we are printing to an output cell)."
+    "The \"print\" statement in Python displays numerical computations and string expressions in a readable text format. If we were running Python from the terminal, \"print\" would output to the command-line, but Jupyter, we are printing everything to an output cell."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 53,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -150,12 +169,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can concatenate different data types in the \"print function\" using a comma."
+    "You can concatenate different data types in \"print\" using a comma. Everything is space-delimited."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -166,7 +185,7 @@
      "output_type": "stream",
      "text": [
       "3 5\n",
-      "Hello World is 2 word long\n"
+      "Hello World is 2 words long\n"
      ]
     }
    ],
@@ -179,19 +198,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Assigning Variables"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "You can declare and assign variables as below. You can also use type(<variable name>) to obtain the type of variable you just assigned (should be of type int!)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -219,33 +231,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of x: 4\n",
+      "Value of x+1: 5\n",
+      "Value of x-1: 3\n",
+      "Value of x*2: 8\n",
+      "Value of x^2: 16\n",
+      "Value of x^(1/2): 4\n",
+      "Value of x: 4\n"
+     ]
+    }
+   ],
    "source": [
-    "print x + 1   # Addition\n",
-    "print x - 1   # Subtraction\n",
-    "print x * 2   # Multiplication\n",
-    "print x ** 2  # Exponentiation (one way)\n",
-    "print x^(1/2) # Exponentiation (other way)"
+    "x = 4\n",
+    "print \"Value of x:\", x\n",
+    "print \"Value of x+1:\", x+1   # Addition\n",
+    "print \"Value of x-1:\", x - 1   # Subtraction\n",
+    "print \"Value of x*2:\", x * 2   # Multiplication\n",
+    "print \"Value of x^2:\", x ** 2  # Exponentiation (one way)\n",
+    "print \"Value of x^(1/2):\", x^(1/2) # Exponentiation (other way)\n",
+    "print \"Value of x:\", x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice how these operations do not actually change the value of x. We have not done any assignment yet!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of x: 4\n",
+      "Value of x: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 4\n",
+    "print \"Value of x:\", x\n",
+    "x = x + 1\n",
+    "print \"Value of x:\", x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can shorthand operations if they simply self-reference the variable being assigned. We can also assign variables on the same line if they are separated by a comma, and the variable assignments are respectively assigned. These snippets are equivalent to what you have seen above, but it allows for cleaner code!"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Value of x: 4\n",
+      "Value of x: 5\n",
+      "Value of y: 5\n",
+      "Value of y: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = 4, 5 # same as x = 4; y = 5\n",
+    "print \"Value of x:\", x\n",
+    "x += 1 # same as: x = x + 1\n",
+    "print \"Value of x:\", x\n",
+    "print \"Value of y:\", y\n",
+    "y *= 2 # same as: x = x * 2\n",
+    "print \"Value of y:\", y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that when we do complex operations on integers, the type can change from an integer to a real number. \"type()\" is a function that lets us inspect the datatype of a specific variable. In Python, \"type()\" is one of the many built-in functions that can do specific tasks within your program (very similar to print). We will learn more about functions, and how we can write our own later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -268,39 +359,155 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "x = 3\n",
-    "print type(x) # Prints \"<type 'int'>\"\n",
-    "print x       # Prints \"3\"\n",
-    "print x + 1   # Addition; prints \"4\"\n",
-    "print x - 1   # Subtraction; prints \"2\"\n",
-    "print x * 2   # Multiplication; prints \"6\"\n",
-    "print x ** 2  # Exponentiation; prints \"9\"\n",
-    "x += 1\n",
-    "print x  # Prints \"4\"\n",
-    "x *= 2\n",
-    "print x  # Prints \"8\"\n",
-    "y = 2.5\n",
-    "print type(y) # Prints \"<type 'float'>\"\n",
-    "print y, y + 1, y * 2, y ** 2 # Prints \"2.5 3.5 5.0 6.25\""
+    "Another way to printing together statements is to convert everything into a string, and then do string concatentation with the \"+\" (Adding strings together). Below are some examples. To create strings that might belong from a mix of different datatypes, we can use cast functions that would interconvert datatypes for us. The function \"str()\" converts any datatype into a string. Other functions such as \"int()\" exist which might be useful in rounding down real numbers, but you cannot easy cast from a string to an int. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {
-    "collapsed": true,
-    "scrolled": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World\n",
+      "Hello World is 2 words long\n",
+      "I have just casted the float 2.5 as the string 2 using the int() and str() functions.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x, y = \"Hello\", \"World\"\n",
+    "print x + \" \" + y\n",
+    "print \"Hello World is \" + str(2) + \" words long\"\n",
+    "print \"I have just casted the float 2.5 as the string \" + str(int(2.5)) + \" using the int() and str() functions.\"\n",
+    "# print int(\"five\") does not make sense! Do not uncomment."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Usually, we want to move beyond these one-line snippets and execute an entire sequence of statements. While Jupyter cells are great at modularizing code, these code blocks won't be present in actual implementation.\n",
+    "\n",
+    "We can use custom functions to execute specific tasks in our program so our source code isn't just one long list of operations.\n",
+    "\n",
+    "Here is a sample function that just prints \"Hello World!\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def hello():\n",
+    "    print \"Hello World!\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We execute it and there is no output. That is because we have to actually invoke the function. Below we invoke function \"hello()\" as \"defined\" above (the \"def\" stands for \"define\"). Because the function \"hello()\" has no parameters that would act as an input, the parentheses are empty. \n",
+    "\n",
+    "In addition to invoking \"hello()\", we also define a new function called \"greet1(name)\", which takes in an argument (preferable a string literal) and says \"Hello\" to that person. Within \"greet1(name)\", we have a variable called \"name\" that is assigned whatever datatype we passed as a parameter (our function calls do not have to make any sense).\n",
+    "\n",
+    "Finally, in addition to taking in inputs, functions can also have outputs, which is done using the return statement. Unlike other Python languages, we can have multiple return statements. Our previous hack for one-line variable assignment will now come in handy!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello World!\n",
+      "Hello Andy\n",
+      "Hello Richard\n",
+      "Hello 2.5\n",
+      "Hello World Please Ignore\n",
+      "Hello Andy\n",
+      "Hello Richard\n"
+     ]
+    }
+   ],
+   "source": [
+    "hello() # Should print out \"Hello World\"\n",
+    "\n",
+    "# Introducing Parameters\n",
+    "def greet1(name):\n",
+    "    print \"Hello\", name\n",
+    "    \n",
+    "greet1(\"Andy\") # Hello Andy\n",
+    "greet1(\"Richard\") # Hello Richard\n",
+    "greet1(2.5) # Hello 2.5\n",
+    "\n",
+    "# Introducting Single Return Statements\n",
+    "def greet2(name):\n",
+    "    return \"Hello \" + name\n",
+    "print greet2(\"World Please Ignore\")\n",
+    "\n",
+    "# Introducting Multiple Return Statements\n",
+    "def greet3(name1, name2):\n",
+    "    return \"Hello \" + name1, \"Hello \" + name2\n",
+    "name1, name2 = greet3(\"Andy\", \"Richard\")\n",
+    "print name1\n",
+    "print name2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are now (somewhat) experts on data types, variable assignments, and functions! Now, write a function that converts from Fahrenheit to Celsius, and vice versa."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def F2C(F):\n",
+    "    return\n",
+    "\n",
+    "def C2F(C):\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Solution\n",
+    "def F2C(F):\n",
+    "    return (F-32)*5/9\n",
+    "\n",
+    "def C2F(C):\n",
+    "    return (9/5)*C+32"
+   ]
   }
  ],
  "metadata": {
