Fixing some stuff in Module 1

--- a/1 - An Introduction to Python.ipynb
+++ b/1 - An Introduction to Python.ipynb
@@ -422,20 +422,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.0\n",
+      "279.508497187\n",
+      "4.0\n",
+      "5040\n",
+      "148.413159103\n",
+      "3.14159265359\n",
+      "2.71828182846\n",
+      "1.0\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "\n",
     "print math.sqrt(9)      # square root function\n",
-    "print math.pow(5,5)     # another way to raise numbers to a power\n",
+    "print math.pow(5, 3.5)  # another way to raise numbers to a power (used for floats)\n",
+    "                        # use \"**\" or the built-in \"pow\" for calculating exact integers\n",
     "print math.ceil(3.6)    # rounds a numerical value upwards\n",
     "print math.factorial(7) # calculates factorials\n",
+    "print math.exp(5)       # calculates e**x\n",
     "print math.pi           # we can also access special constants like pi\n",
-    "print math.e            # and e"
+    "print math.e            # and e\n",
+    "print math.log(math.e)  # calculates ln(x)"
    ]
   },
   {
@@ -451,20 +469,29 @@
    "source": [
     "Booleans are built-in constants that represent \"1\" and \"0\" (for \"True\" and \"False\" respectively). \n",
     "\n",
-    "In addition to using \"type(),\" the \"isinstance()\" function returns \"True\" if a variable is a given datatype. Here, we check if \"True\" is of datatype \"bool.\" It returns \"True.\" (Pretty meta right?)"
+    "In addition to using \"type(),\" the \"isinstance()\" function returns \"True\" if a variable is a given datatype. Here, we check if \"True\" is of datatype \"bool.\" It should return \"True.\" (Pretty meta right?)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'bool'>\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "t, f = True, False\n",
     "print type(t) # Prints \"<type 'bool'>\"\n",
-    "print isinstance(t, bool)"
+    "print isinstance(t, bool) # It is true that \"True\" is a bool datatype, so it should return \"True\""
    ]
   },
   {
@@ -476,11 +503,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n",
+      "True\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "print t and f # Logical AND\n",
     "print t or f  # Logical OR\n",
@@ -507,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 130,
    "metadata": {
     "collapsed": true
    },
@@ -525,11 +566,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import collections\n",
     "isinstance(numbers, collections.Container)"
@@ -544,11 +596,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello\n",
+      "HELLO\n",
+      "  hello\n",
+      " hello \n",
+      "he(ell)(ell)o\n",
+      "world\n",
+      "hello world\n"
+     ]
+    }
+   ],
    "source": [
     "s = \"hello\"\n",
     "t = \"world\"\n",
@@ -578,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -608,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 134,
    "metadata": {
     "collapsed": false
    },
@@ -643,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
@@ -688,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 136,
    "metadata": {
     "collapsed": true
    },
@@ -711,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 137,
    "metadata": {
     "collapsed": false
    },
@@ -763,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -783,7 +849,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-108-9022fcec5a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mgreet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-138-9022fcec5a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mgreet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
      ]
     }
@@ -833,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -848,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 140,
    "metadata": {
     "collapsed": true
    },
@@ -878,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 141,
    "metadata": {
     "collapsed": true
    },
@@ -891,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 142,
    "metadata": {
     "collapsed": true
    },
@@ -922,12 +988,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 143,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import math\n",
     "def distance():\n",
     "    x1, y1 = eval(raw_input(\"Enter coordinates for point 1 in the form of x, y: \"))\n",
     "    x2, y2 = eval(raw_input(\"Enter coordinates for point 2 in the form of x, y: \"))\n",
@@ -937,12 +1004,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 144,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "import math\n",
     "def distance():\n",
     "    x1, y1 = eval(raw_input(\"Enter coordinates for point 1 in the form of x, y: \"))\n",
     "    x2, y2 = eval(raw_input(\"Enter coordinates for point 2 in the form of x, y: \"))\n",
