--- a/1 - An Introduction to Python.ipynb
+++ b/1 - An Introduction to Python.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -548,7 +548,9 @@
       "False\n",
       "True\n",
       "True\n",
-      "2\n"
+      "2\n",
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -559,14 +561,55 @@
     "print t == f  # Logical Equivalance\n",
     "print t != f  # Logical XOR\n",
     "print t == 1  # We can see that \"True\" is actually equal to 1\n",
-    "print t + 1   # Boolean + int = int"
+    "print t + 1   # Boolean + int = int\n",
+    "print 5 > 1\n",
+    "print -2 > 5/2.0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that you know how to use booleans and logical operations to determine if something is True or False, "
+    "Now that you know how to use booleans and logical operations to determine if something is True or False, you can use them to write if/else control statements! These statements tell your program to execute a certain section of code only if a particular test evaluates to a boolean True and to not do anything or execute another section of code if the test evaluates to be false. Below are some examples that you can play around with: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Richard is dumb\n",
+      "Richard is dumber than Andy\n",
+      "Richard and Andy are equally smart\n"
+     ]
+    }
+   ],
+   "source": [
+    "richards_iq = 100\n",
+    "if richards_iq < 120:\n",
+    "    print 'Richard is dumb'\n",
+    "else:\n",
+    "    print 'Richard is smart'\n",
+    "    \n",
+    "andys_iq = 120\n",
+    "if richards_iq < andys_iq:\n",
+    "    print 'Richard is dumber than Andy'\n",
+    "else:\n",
+    "    print 'Richard is just as smart or smarter than Andy'\n",
+    "    \n",
+    "andys_iq = 100\n",
+    "if richards_iq < andys_iq:\n",
+    "    print 'Richard is dumber than Andy'\n",
+    "elif richards_iq == andys_iq: #elif is Python's way of saying \"else if\" so that you can have multiple controls\n",
+    "    print 'Richard and Andy are equally smart'\n",
+    "else:\n",
+    "    print 'Richard is smarter than Andy'"
    ]
   },
   {
@@ -774,14 +817,280 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Lists"
+    "### 1.5 Lists\n",
+    "Often times, we want to store a list of things, whether they be strings or integers or other objects. In Python, this is achieved through a type of container called a list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4]\n",
+      "['Andy', 'Richard', 'Haase']\n"
+     ]
+    }
+   ],
+   "source": [
+    "nums = [1, 2, 3, 4]\n",
+    "print nums\n",
+    "\n",
+    "names = ['Andy', 'Richard', 'Haase']\n",
+    "print names"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.6 Loops"
+    "Each position number in the list is known as an index. In Python, lists are 0-indexed, which means the first position is actually index number 0. We can access specific index positions in a list with square brackets as shown below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "Andy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print nums[0]\n",
+    "print names[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can even access a range of index positions! Notice that when we use the colon, the index position preceding the colon is included, but the index position following the colon is excluded."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "['Andy', 'Richard']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print nums[0:3]\n",
+    "print names[0:2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can perform functions such as adding and removing and changing the list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000]\n",
+      "[1, 2, 3, 4, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000]\n",
+      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins']\n",
+      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins', 'Hopkins']\n",
+      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins']\n",
+      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print nums\n",
+    "nums.append(10000)\n",
+    "print nums\n",
+    "\n",
+    "print names\n",
+    "names.append('Hopkins')\n",
+    "print names\n",
+    "names.remove('Hopkins')\n",
+    "print names\n",
+    "names[3] = 'Johnny'\n",
+    "print names"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6 Loops\n",
+    "There are two types of loops in programming, the while loop and the for loop. The while loop if like a continuous if statement - it executes a certain section of code WHILE a certain logic statement evaluates to boolean True, and it stops as soon as the logic statement evaluates to boolean False. Below is an example of a while loop that prints out random days of the week until we print out 'Sunday':"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "days = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday']\n",
+    "day = ''\n",
+    "while(day != 'Sunday'):\n",
+    "    day = days[random.randint(0, 6)] #prints out a random integer between 0 and 6, inclusive\n",
+    "    print day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Suppose you want to print out the word 'Sunday' a specific number of times. One way to do this would be to use a counter variable and a while loop, and increase the counter for each interation of the while loop until you hit the number of times you wanted to print out 'Sunday'. This is shown below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday\n",
+      "Sunday\n",
+      "Sunday\n",
+      "Sunday\n",
+      "Sunday\n"
+     ]
+    }
+   ],
+   "source": [
+    "counter = 0\n",
+    "while counter < 5:\n",
+    "    print 'Sunday'\n",
+    "    counter += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Often times, we need to perform some function, such as printing out 'Sunday', a specfic number of times. Luckily, for loops exist exactly for this purpose and eliminate the need to keep track of a counter variable:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sunday\n",
+      "Sunday\n",
+      "Sunday\n",
+      "Sunday\n",
+      "Sunday\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print 'Sunday'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the code above, range(5) returns a list of all the integers less than 5. Essentially, we are saying:\n",
+    "```\n",
+    "for i in [0, 1, 2, 3, 4]:\n",
+    "    print 'Sunday'\n",
+    "```\n",
+    "The variable 'i' after the word 'for' takes on each one of the numbers in the list. This means that we can do fun things with the variable i in the loop!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "Monday\n",
+      "Tuesday\n",
+      "Wednesday\n",
+      "Thursday\n",
+      "Friday\n",
+      "Saturday\n",
+      "Sunday\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(5):\n",
+    "    print i**2\n",
+    "    \n",
+    "for i in range(5):\n",
+    "    print i*2\n",
+    "    \n",
+    "for i in ['Mon', 'Tues', 'Wednes', 'Thurs', 'Fri', 'Satur', 'Sun']:\n",
+    "    print i+'day'"
    ]
   },
   {
