--- a/1 - An Introduction to Python.ipynb
+++ b/1 - An Introduction to Python.ipynb
@@ -120,12 +120,12 @@
     "* Booleans - True/False\n",
     "* Strings - Characters/Words\n",
     "\n",
-    "The \"print\" statement in Python displays numerical computations and string expressions in a readable text format. If we were running Python from the terminal, \"print\" would output to the command-line, but in Jupyter, we are printing everything to an output cell in your browser window."
+    "The \"print\" statement in Python displays numerical computations and string expressions in a readable text format. If we were running Python from the terminal, \"print\" would output to the command-line, but in Jupyter, we are printing everything to an output cell in your browser window. Here I am doing a tutorial"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -137,18 +137,20 @@
      "text": [
       "3\n",
       "3.5\n",
-      "6.5\n",
+      "7.5\n",
       "True\n",
-      "Hello World\n"
+      "Hello World\n",
+      "This Workshop\n"
      ]
     }
    ],
    "source": [
-    "print 3 # integer\n",
+    "print(3) # integer\n",
     "print 3.5 # float\n",
-    "print 3 + 3.5 # float\n",
+    "print 3 + 4.5 # float\n",
     "print True # boolean\n",
-    "print \"Hello World\" #string"
+    "print \"Hello World\" #This line of code prints hello world\n",
+    "print 'This Workshop'"
    ]
   },
   {
@@ -160,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -199,13 +201,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The variable 4 is of <type 'int'>\n"
+      "The variable 4 is of <type 'type'>\n"
      ]
     }
    ],
    "source": [
-    "x = 4\n",
-    "print \"The variable\", x, \"is of\", type(x)"
+    "andy = 4\n",
+    "print \"The variable\", andy, \"is of\", type(int)"
    ]
   },
   {
@@ -224,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -238,7 +240,7 @@
       "Value of x+1: 5\n",
       "Value of x-1: 3\n",
       "Value of x*2: 8\n",
-      "Value of x**2: 64\n",
+      "Value of x**2: 16\n",
       "Value of x: 4\n"
      ]
     }
@@ -249,7 +251,7 @@
     "print \"Value of x+1:\", x + 1       # Addition\n",
     "print \"Value of x-1:\", x - 1       # Subtraction\n",
     "print \"Value of x*2:\", x * 2       # Multiplication\n",
-    "print \"Value of x**2:\", x ** 3     # Exponentiation\n",
+    "print \"Value of x**2:\", x ** 2     # Exponentiation\n",
     "print \"Value of x:\", x             # Notice that the value of x is still the same! We didn't do any assignment!"
    ]
   },
@@ -262,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -271,14 +273,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "4\n",
       "5\n",
+      "6\n",
       "6\n"
      ]
     }
    ],
    "source": [
+    "print x\n",
     "x = 5\n",
     "print x\n",
+    "print x + 1\n",
     "x = x + 1 # Increment x by 1\n",
     "print x"
    ]
@@ -292,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -308,7 +314,7 @@
    "source": [
     "x, y = 4, 5     # same as x = 4; y = 5\n",
     "x += 1          # same as: x = x + 1\n",
-    "y *= 2          # same as: x = x * 2\n",
+    "y *= 2          # same as: y = y * 2\n",
     "print x, y"
    ]
   },
@@ -321,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -592,7 +598,7 @@
    ],
    "source": [
     "richards_iq = 100\n",
-    "if richards_iq < 120:\n",
+    "if (richards_iq < 120):\n",
     "    print 'Richard is dumb'\n",
     "else:\n",
     "    print 'Richard is smart'\n",
@@ -823,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -883,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -920,12 +926,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000]\n",
-      "[1, 2, 3, 4, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000, 10000]\n",
-      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins']\n",
-      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins', 'Hopkins']\n",
-      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins']\n",
-      "['Andy', 'Richard', 'Haase', 'Johnny', 'Hopkins']\n"
+      "[1, 2, 3, 4, 10000, 10000]\n",
+      "[1, 2, 3, 4, 10000, 10000, 10000]\n",
+      "['Andy', 'Richard', 'Johnny']\n",
+      "['Andy', 'Richard', 'Johnny', 'Hopkins']\n",
+      "['Andy', 'Richard', 'Johnny']\n",
+      "['Andy', 'Richard', 'Johnny']\n"
      ]
     }
    ],
@@ -939,8 +945,33 @@
     "print names\n",
     "names.remove('Hopkins')\n",
     "print names\n",
-    "names[3] = 'Johnny'\n",
+    "names[2] = 'Johnny'\n",
     "print names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20, 22, 24, 26, 28, 30, 32, 34, 36, 38, 40, 42, 44, 46, 48, 50, 52, 54, 56, 58, 60, 62, 64, 66, 68, 70, 72, 74, 76, 78, 80, 82, 84, 86, 88, 90, 92, 94, 96, 98, 100]\n"
+     ]
+    }
+   ],
+   "source": [
+    "test = [x*2 for x in range(51)]\n",
+    "print test\n",
+    "test = []\n",
+    "for x in range(51):\n",
+    "    test.append(x*2)\n",
+    "print test"
    ]
   },
   {
@@ -953,7 +984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
@@ -962,6 +993,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Monday\n",
+      "Tuesday\n",
+      "Saturday\n",
+      "Saturday\n",
+      "Tuesday\n",
+      "Monday\n",
+      "Thursday\n",
+      "Thursday\n",
+      "Thursday\n",
+      "Tuesday\n",
+      "Tuesday\n",
       "Sunday\n"
      ]
     }
@@ -1017,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -1026,17 +1068,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sunday\n",
-      "Sunday\n",
-      "Sunday\n",
-      "Sunday\n",
-      "Sunday\n"
+      "Sunday 0\n",
+      "Sunday 1\n",
+      "Sunday 2\n",
+      "Sunday 3\n",
+      "Sunday 4\n"
      ]
     }
    ],
    "source": [
     "for i in range(5):\n",
-    "    print 'Sunday'"
+    "    print 'Sunday', i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "range(0,5)"
    ]
   },
   {
@@ -1090,7 +1154,7 @@
     "    print i*2\n",
     "    \n",
     "for i in ['Mon', 'Tues', 'Wednes', 'Thurs', 'Fri', 'Satur', 'Sun']:\n",
-    "    print i+'day'"
+    "    print i +'day'"
    ]
   },
   {
@@ -1115,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -1138,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -1179,6 +1243,32 @@
     "name1, name2 = greet3(\"Andy\", \"Richard\")\n",
     "print name1\n",
     "print name2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def addfive(x):\n",
+    "    return x+5\n",
+    "\n",
+    "eight = addfive(3)\n",
+    "eight"
    ]
   },
   {
