--- a/1 - An Introduction to Python.ipynb
+++ b/1 - An Introduction to Python.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -247,7 +247,7 @@
    "source": [
     "x = 4\n",
     "print \"Value of x:\", x\n",
-    "print \"Value of x+1:\", x+1         # Addition\n",
+    "print \"Value of x+1:\", x + 1         # Addition\n",
     "print \"Value of x-1:\", x - 1       # Subtraction\n",
     "print \"Value of x*2:\", x * 2       # Multiplication\n",
     "print \"Value of x**2:\", x ** 3     # Exponentiation (one way)\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -380,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -401,7 +401,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-127-f7bafd1ef0d8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# gets the max from a list of numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# gets the min from a list of numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"what would this do\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TypeError!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-11-f7bafd1ef0d8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# gets the max from a list of numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mmin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m       \u001b[0;31m# gets the min from a list of numbers\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mabs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"what would this do\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# TypeError!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m: bad operand type for abs(): 'str'"
      ]
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -543,12 +543,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Strings are a more complex datatype. Ints and Floats are primitive datatypes, meaning that they can only hold one value. In Python, strings belong to an object class called containers, which can hold an arbitrary amount of objects."
+    "Strings are a more complex datatype. ints, bools, and floats are primitive datatypes, meaning that they can only hold one value. In Python, strings belong to an object class called containers, which can hold an arbitrary amount of objects."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -561,12 +561,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can check that strings are containers using isinstance."
+    "We can check that strings are containers using \"isinstance()\" again."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -577,7 +577,7 @@
        "True"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -674,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -777,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 176,
    "metadata": {
     "collapsed": false
    },
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -849,7 +849,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-138-9022fcec5a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mgreet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-22-9022fcec5a08>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mgreet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Test\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'name' is not defined"
      ]
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -914,7 +914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -932,7 +932,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1.6.2 Calculating Area of a Circle"
+    "#### 1.6.2 Calculating Area, Perimeter of a Circle"
    ]
   },
   {
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 178,
    "metadata": {
     "collapsed": true
    },
@@ -957,12 +957,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 179,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "# Solution\n",
     "import math\n",
     "def AreaOfCircle(r):\n",
     "    return math.pi*r**2, math.pi*r*2"
@@ -988,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 180,
    "metadata": {
     "collapsed": true
    },
@@ -1004,19 +1005,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 183,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter coordinates for point 1 in the form of x, y: 5,6\n",
+      "Enter coordinates for point 2 in the form of x, y: 1,2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5.656854249492381"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "# Solution\n",
     "import math\n",
     "def distance():\n",
     "    x1, y1 = eval(raw_input(\"Enter coordinates for point 1 in the form of x, y: \"))\n",
     "    x2, y2 = eval(raw_input(\"Enter coordinates for point 2 in the form of x, y: \"))\n",
     "    \n",
-    "    return math.sqrt((x2 - x1)**2 + (y2 - y1)**2)"
+    "    return math.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
+    "distance()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.6.4 Find the Gradient of F(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# x is a list that holds the three coordinate variables (x, y, z)\n",
+    "def f(x):\n",
+    "    \"\"\"f(x) R^3 -> R\"\"\"\n",
+    "    return x[0]**3 + (x[0]-1.0)*x[2] + 5*(x[1]-3.0)\n",
+    "\n",
+    "# determine the gradient of f(x)\n",
+    "def f_grad(x):\n",
+    "    \"\"\"f_grad(x) returns the gradient of f(x)\"\"\"\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Solution\n",
+    "def f(x):\n",
+    "    \"\"\"f(x) R^3 -> R\"\"\"\n",
+    "    return x[0]**3 + (x[0]-1.0)*x[2] + 5*(x[1]-3.0)\n",
+    "\n",
+    "def f_grad(x):\n",
+    "    \"\"\"f_grad(x) returns the gradient of f(x)\"\"\"\n",
+    "    return (3*x[0]**2 + x[2], 5, x[0]-1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
