--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -1,13 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Lists\n",
+    "\n",
+    "Lists are perhaps the most powerful aspect of the Python programming language over other programming languages. "
+   ]
   }
  ],
  "metadata": {
