--- a/Loops.ipynb
+++ b/Loops.ipynb
@@ -175,6 +175,13 @@
    "source": [
     "## Breaking Out of a Loop"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More Examples"
+   ]
   }
  ],
  "metadata": {
