--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -170,7 +170,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List Comprehension"
+    "## List Comprehension\n"
    ]
   }
  ],
