--- a/Lists.ipynb
+++ b/Lists.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "Lists are ordered collections of items. Lists are perhaps the most powerful aspect of the Python programming language over other programming languages. \n",
     "\n",
+    "## 1. Introduction to Lists\n",
+    "\n",
     "Each position in the list is known as an **index**. The most important thing to know about lists is that 0-indexed, meaning the first position in the list is at index position 0 (NOT index position 1). Below are some basic ways to create lists and some fundamental functions you can perform on lists."
    ]
   },
@@ -96,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Iterating (Looping) through Lists\n",
+    "## 2. Iterating (Looping) through Lists\n",
     "Often times, it will be useful to loop through all items in a list and perform functions on them, for example checking if numbers in a list are divisible by 3 or not. Python "
    ]
   },
@@ -170,7 +172,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## List Comprehension\n"
+    "## 3. List Comprehension\n",
+    "Whenever you need to populate a list in a repetitive or regular fashion, we can use list comprehensions. List comprehensions are "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+      "[0, 2, 4, 6, 8]\n",
+      "[(0, 1), (0, 2), (0, 3), (0, 4), (1, 0), (1, 2), (1, 3), (1, 4), (2, 0), (2, 1), (2, 3), (2, 4)]\n",
+      "['Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday', 'Sunday']\n"
+     ]
+    }
+   ],
+   "source": [
+    "zeros = [0 for i in range(10)]\n",
+    "print zeros\n",
+    "integers = [i for i in range(10)]\n",
+    "print integers\n",
+    "even1 = [2*i for i in range(10)]\n",
+    "print even1\n",
+    "even2 = [i for i in range(10) if i % 2 == 0]\n",
+    "print even2\n",
+    "coordinates = [(i, j) for i in range(3) for j in range(5) if i != j]\n",
+    "print coordinates\n",
+    "days = [prefix + 'day' for prefix in ['Mon', 'Tues', 'Wednes', 'Thurs', 'Fri', 'Satur', 'Sun']]\n",
+    "print days"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Assignment"
    ]
   }
  ],
